<resources>
    <string name="app_name">My Application</string>
    <string name="selamat_datang">SELAMAT DATANG!</string>
    <string name="standu">STANDU</string>
    <string name="apk_standu">Aplikasi Edukasi Stunting untuk \n Para Bunda</string>
    <string name="button_daftar">Daftar</string>
    <string name="button">Masuk</string>
    <string name="textview2">Selamat Datang \n Bunda!</string>
    <string name="formulir_daftar">Formulir Pendaftaran</string>
    <string name="button2_daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Sudah Memiliki Akun?</string>
    <string name="login">Masuk</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="informasi_stunting">informasi</string>
    <string name="nutrisi_anak">nutrisi</string>
    <string name="imunisasi_anak">imunisasi</string>
    <string name="pengaturan_Akun">pengaturan</string>
    <string name="detail_info1">Cegah Stunting dengan Perbaikan Pola Makan</string>
    <string name="selengkapnya">Selengkapnya</string>
    <string name="nutrisi">NUTRISI ANAK</string>
    <string name="back">back</string>
    <string name="sharing">SHARING STUNTING</string>
    <string name="diaryku">diaryku</string>
    <string name="nama_anak">Budi</string>
    <string name="anakku">ANAKKU</string>
    <string name="detailinformasi">Kondisi tubuh anak yang pendek seringkali dikatakan sebagai faktor
        keturunan (genetik) dari kedua orang tuanya, sehingga masyarakat banyak hanya menerima tanpa
        berbuat apa - apa untuk mencegahnya\n\n Padahal seperti yang kita ketahui, genetika merupakan
        faktor determinan kesehatan yang paling kecil pengaruhnya dibandingkan dengan faktor perilaku,
        lingkungan, sosial, ekonomi, budaya, politik, dan pelayanan kesehatan. </string>
    <string name="imunisasi">IMUNISASI ANAK</string>
    <string name="budi">Budi</string>
    <string name="data_budi">Laki-laki \nUmur : 8 tahun \nBerat Badan : 26 kg \nTinggi Badan : 128 cm</string>
    <string name="puskesmas">Ayo Lihat Puskesmas/Posyandu \nTerdekat Untuk Cegah Stunting Anak!</string>
    <string name="lihat">Lihat</string>
    <string name="jadwal">Jadwal Imunisasi Anak</string>
</resources>