<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/standuwithtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="290dp"
        android:contentDescription="@string/diaryku"
        android:src="@drawable/diaryku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="618dp"
        android:contentDescription="@string/imunisasi_anak"
        android:src="@drawable/imunisasi_anak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="618dp"
        android:contentDescription="@string/pengaturan_Akun"
        android:src="@drawable/pengaturan_akun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="454dp"
        android:contentDescription="@string/nutrisi_anak"
        android:src="@drawable/nutrisi_anak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="454dp"
        android:contentDescription="@string/informasi_stunting"
        android:src="@drawable/informasi_stunting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>