<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Masuk">

    <TextView
        android:id="@+id/datang_bunda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/textview2"
        android:textAlignment="center"
        android:textColor="#5FD068"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="456dp"
        android:autofillHints="no"
        android:background="@drawable/custom_form"
        android:hint="@string/username"
        android:inputType="text"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="536dp"
        android:autofillHints="no"
        android:background="@drawable/custom_form"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/daftar"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="656dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/masuk"
        android:textColor="#FEFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_allready"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins"
        android:text="@string/belum_memiliki_akun"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftar" />

    <TextView
        android:id="@+id/login"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/daftar"
        android:textColor="#5FD068"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daftar" />


</androidx.constraintlayout.widget.ConstraintLayout>