<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailSharing">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/lilac"
        android:gravity="center">

        <TextView
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="@string/sharing"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/back"
        android:onClick="pindahStunting"
        android:src="@drawable/back_purple" />

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:id="@+id/cardImage"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <ImageView
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:id="@+id/detailImage"
            android:padding="10dp"
            android:layout_gravity="center"
            android:src="@drawable/informasistunting_1"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="Cegah Stunting dengan Perbaikan Pola Makan"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/detailinformasi"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:justificationMode="inter_word"/>


</LinearLayout>