<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/pink"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:fontFamily="@font/poppins_extrabold"
            android:gravity="center"
            android:text="@string/imunisasi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#FBFBFB"
        android:contentDescription="@string/back"
        android:onClick="pindahHome"
        android:src="@drawable/back_pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center"
        android:text="@string/budi"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/data_budi"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center"
        android:text="@string/puskesmas"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_main"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/lihat"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center"
        android:text="@string/jadwal"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:gravity="center"
                android:text="Usia Bayi"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:gravity="center"
                android:text="Jenis Imunisasi"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:gravity="center"
                android:text="Status"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extrabold"
                android:gravity="center"
                android:text="Aksi"
                android:textColor="@color/black" />
        </TableRow>

        <View android:layout_height="2dip" android:background="@color/pink" />
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="XX Bulan"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Imunisasi XX"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sudah"
                android:fontFamily="@font/poppins"
                android:textColor="@color/green"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:src="@drawable/aksi_imun"/>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="XX Bulan"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Imunisasi XX"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sudah"
                android:textColor="@color/green"
                android:fontFamily="@font/poppins" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:src="@drawable/aksi_imun"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="XX Bulan"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Imunisasi XX"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Belum"
                android:fontFamily="@font/poppins"
                android:textColor="@color/red"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:src="@drawable/aksi_imun"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="XX Bulan"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Imunisasi XX"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Belum"
                android:fontFamily="@font/poppins"
                android:textColor="@color/red"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:src="@drawable/aksi_imun"/>
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>